2008-02-02  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Using Timelines: Change the X to a /
	in the description of duration. Thanks to Ashwin Kashyap.

2008-01-30  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Introduction: Remove the term 2.5D.
	Actor Basics: Change 2.5D term to 2D surfaces in 3D space.

2008-01-30  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Change mentions of GtkClutter to GtkClutterEmbed.
	* examples/stage_widget/main.c: (main): Use the new GtkClutterEmbed instead of the 
	old (removed) GtkClutter widget.
	* examples/full_example/main.c: (on_timeline_rotation_completed):
	Adapt to the new signature of the clutter_behaviour_scale_new() function.

2008-01-18  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Actor transformations: Use the correct example code.
	Thanks to Ashwin Kashyap.

2007-12-17  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Effects: Mention optional timeline cloning when using effects.

2007-12-17  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Actors: Added clipping sub-section, after talking to Ebassi.

2007-12-17  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Corrected the events chain sections, now explaining the 
	capture-event signal. 

2007-12-17  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Introduction: Mention that it is 
	a retatained mode API, though that would be obvious if you already knew what 
	that meant.
	Mention that timelines and behaviours use callback functions of time to change actor properties. 
	I don't see much more that we can say about these without reallying getting into the details, 
	which we do in the relevant chapters.
	Actors: Mention show/hide.
	Actors: Events: Describe false/true return value and the sequence of actors that handle events.